# riemann-landscapes

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
_setup_scripts/: README.md  create_environment.sh  rename_project.sh
notebooks/: nb1.ipynb
src/rlandscapes/: __main__.py
tests/: conftest.py  test_core.py
