[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rlandscapes"
dynamic = ["version"]
requires-python = ">= 3.8"
readme = "README.md"
description = "Exploring gradient dynamics."
authors = [
  {name = "Addison Howe"},
  {name = "Achilleas Mittaris"},
]
dependencies = [
  "numpy>=2.2",
  "matplotlib>=3.10",
  "jax>=0.5",
  "equinox>=0.11",
  "diffrax>=0.7",
]

[project.scripts]
rlandscapes = "rlandscapes.__main__:main"

[project.optional-dependencies]
jupyter = [
  "ipykernel",
  "ipywidgets",
]
dev = [
  "pytest>=8.3",
]
